--- a/index.html
+++ b/index.html
@@ -4,64 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap Site</title>
+  <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
 </head>
-<body>
-
-<nav class="navbar" >
+<body style="background-color: black;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-     <a class="navbar-brand" href="#">Portfolio</a>
-
- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">Portfolio</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    
-<div class="collapse">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About me </a>
+          <a class="nav-link" href="#">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact me </a>
+          <a class="nav-link ">Contact me </a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
+<div class="wrapper">
+  <div class="profile">
+     <img src="../images/mannu.jpg">
+  </div>
+  <div class="intro">
+ 
+  <h1 style="font-size: 60px;"> My<br> Portfolio</h1>
+  <br>
+  <br>
+  <br>
+  <p style="font-size: 30px;">
+    "Any fool can write code that a computer can understand.Good programmers write code that humans can understand.""
+  </p>
+ </div>
+</div>
+
+</div>
 
 
-
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</header>
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 
