--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Project</a>
+          <a class="nav-link" href="./index1.html">About me </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About me</a>
+          <a class="nav-link" href="./index2.html">Contact me </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link ">Contact me </a>
+          <a class="nav-link" href="./index3.html">Get In Touch </a>
         </li>
       </ul>
     </div>
